rbdir = $(pyexecdir)/reviewboard/scmtools
nobase_rb_PYTHON =		\
	__init__.py		\
	core.py			\
	cvs.py			\
	git.py			\
	hg.py			\
	localfile.py		\
	models.py		\
	perforce.py		\
	perforce_vmware.py	\
	svn.py			\
	tests.py

nobase_rb_DATA =								\
	fixtures/git.json							\
	fixtures/hg.json							\
	fixtures/initial_data.json						\
	fixtures/test_scmtools.json						\
	fixtures/vmware.json							\
	testdata/cvs_repo/CVSROOT/checkoutlist					\
	testdata/cvs_repo/CVSROOT/checkoutlist,v				\
	testdata/cvs_repo/CVSROOT/commitinfo					\
	testdata/cvs_repo/CVSROOT/commitinfo,v					\
	testdata/cvs_repo/CVSROOT/config					\
	testdata/cvs_repo/CVSROOT/config,v					\
	testdata/cvs_repo/CVSROOT/cvswrappers					\
	testdata/cvs_repo/CVSROOT/cvswrappers,v					\
	testdata/cvs_repo/CVSROOT/editinfo					\
	testdata/cvs_repo/CVSROOT/editinfo,v					\
	testdata/cvs_repo/CVSROOT/history					\
	testdata/cvs_repo/CVSROOT/loginfo					\
	testdata/cvs_repo/CVSROOT/loginfo,v					\
	testdata/cvs_repo/CVSROOT/modules					\
	testdata/cvs_repo/CVSROOT/modules,v					\
	testdata/cvs_repo/CVSROOT/notify					\
	testdata/cvs_repo/CVSROOT/notify,v					\
	testdata/cvs_repo/CVSROOT/rcsinfo					\
	testdata/cvs_repo/CVSROOT/rcsinfo,v					\
	testdata/cvs_repo/CVSROOT/taginfo					\
	testdata/cvs_repo/CVSROOT/taginfo,v					\
	testdata/cvs_repo/CVSROOT/verifymsg					\
	testdata/cvs_repo/CVSROOT/verifymsg,v					\
	testdata/cvs_repo/test/testfile,v					\
	testdata/git_binary.diff						\
	testdata/git_complex.diff						\
	testdata/git_delfile.diff						\
	testdata/git_newfile.diff						\
	testdata/git_repo/config						\
	testdata/git_repo/description						\
	testdata/git_repo/HEAD							\
	testdata/git_repo/hooks/applypatch-msg					\
	testdata/git_repo/hooks/commit-msg					\
	testdata/git_repo/hooks/post-commit					\
	testdata/git_repo/hooks/post-receive					\
	testdata/git_repo/hooks/post-update					\
	testdata/git_repo/hooks/pre-applypatch					\
	testdata/git_repo/hooks/pre-commit					\
	testdata/git_repo/hooks/pre-rebase					\
	testdata/git_repo/hooks/update						\
	testdata/git_repo/info/exclude						\
	testdata/git_repo/objects/a6/2df6c28c6c150d671c9947a3d07928c21a07e0	\
	testdata/git_repo/objects/b1/7a09b164f5f1ffc8b31ca5980934ffa39faca3	\
	testdata/git_repo/objects/cc/ffbb4f9ed7cca1b2406537beb7766d41ff818f	\
	testdata/git_repo/objects/d6/613f5f8b58eb6a88ee386ea140364c8645005c	\
	testdata/git_repo/objects/e9/65047ad7c57865823c7d992b1d046ea66edf78	\
	testdata/git_repo/objects/ff/0dcb88371177535b7b7ab25e4c0add6dfd8a26	\
	testdata/git_repo/refs/heads/master					\
	testdata/git_simple.diff						\
	testdata/hg_repo/doc/readme						\
	testdata/hg_repo/.hg/00changelog.i					\
	testdata/hg_repo/.hg/branch.cache					\
	testdata/hg_repo/.hg/branches.cache					\
	testdata/hg_repo/.hg/dirstate						\
	testdata/hg_repo/.hg/requires						\
	testdata/hg_repo/.hg/store/00changelog.i				\
	testdata/hg_repo/.hg/store/00manifest.i					\
	testdata/hg_repo/.hg/store/undo						\
	testdata/hg_repo/.hg/store/data/doc/readme.i				\
	testdata/hg_repo/.hg/undo.dirstate					\
	testdata/svn_repo/conf/authz						\
	testdata/svn_repo/conf/passwd						\
	testdata/svn_repo/conf/svnserve.conf					\
	testdata/svn_repo/db/current						\
	testdata/svn_repo/db/format						\
	testdata/svn_repo/db/fs-type						\
	testdata/svn_repo/db/revprops/0						\
	testdata/svn_repo/db/revprops/1						\
	testdata/svn_repo/db/revprops/2						\
	testdata/svn_repo/db/revs/0						\
	testdata/svn_repo/db/revs/1						\
	testdata/svn_repo/db/revs/2						\
	testdata/svn_repo/db/uuid						\
	testdata/svn_repo/db/write-lock						\
	testdata/svn_repo/format						\
	testdata/svn_repo/hooks/post-commit.tmpl				\
	testdata/svn_repo/hooks/post-lock.tmpl					\
	testdata/svn_repo/hooks/post-revprop-change.tmpl			\
	testdata/svn_repo/hooks/post-unlock.tmpl				\
	testdata/svn_repo/hooks/pre-commit.tmpl					\
	testdata/svn_repo/hooks/pre-lock.tmpl					\
	testdata/svn_repo/hooks/pre-revprop-change.tmpl				\
	testdata/svn_repo/hooks/pre-unlock.tmpl					\
	testdata/svn_repo/hooks/start-commit.tmpl				\
	testdata/svn_repo/locks/db.lock						\
	testdata/svn_repo/locks/db-logs.lock					\
	testdata/svn_repo/README.txt						\
	testdata/vmware.changeset						\
	testdata/vmware-phil-is-crazy.changeset					\
	testdata/vmware-single-line-desc.changeset

EXTRA_DIST = $(nobase_rb_DATA)
