rbdir = $(pyexecdir)/reviewboard/templates
nobase_rb_DATA =				\
	accounts/login.html			\
	accounts/prefs.html			\
	accounts/register.html			\
	base_feeds.html				\
	base.html				\
	box.html				\
	diffviewer/changeindex.html		\
	diffviewer/comments_dlg.html		\
	diffviewer/diff_file_fragment.html	\
	diffviewer/view_diff.html		\
	errorbox.html				\
	feeds/reviews_description.html		\
	feeds/reviews_title.html		\
	iphone/base.html			\
	iphone/dashboard.html			\
	iphone/dashboard_list.html		\
	iphone/diff_files.html			\
	iphone/diff.html			\
	iphone/group_list.html			\
	iphone/login.html			\
	iphone/review_request_detail.html	\
	iphone/review_request_list.html		\
	iphone/submitter_list.html		\
	iphone/user_prefs.html			\
	reports/report_list.html		\
	reports/review-moinmoin.txt		\
	reports/review_request-moinmoin.txt	\
	reports/review_request-text.txt		\
	reports/review-text.txt			\
	reports/status_report-moinmoin.txt	\
	reports/status_report-text.txt		\
	reviews/dashboard_entry.html		\
	reviews/dashboard.html			\
	reviews/datagrid.html			\
	reviews/new_review_request.html		\
	reviews/reply_email.txt			\
	reviews/review_detail.html		\
	reviews/review_email.txt		\
	reviews/review_reply.html		\
	reviews/review_reply_section.html	\
	reviews/review_request_box.html		\
	reviews/review_request_email.txt	\
	reviews/review_request_listview.html	\
	reviews/screenshot_detail.html		\
	reviews/screenshotindex.html		\
	reviews/star.html

EXTRA_DIST = $(nobase_rb_DATA)
