rbdir = $(pyexecdir)/reviewboard/templates
nobase_rb_DATA = \
	404.html \
	500.html \
	accounts/login.html \
	accounts/prefs.html \
	accounts/register.html \
	admin/base_site.html \
	admin/cache_stats.html \
	admin/dashboard.html \
	admin/database.html \
	admin/feed.html \
	admin/general_settings.html \
	admin/index.html \
	admin/settings.html \
	admin/manual_updates_required.html \
	admin/manual-updates/media-upload-dir.html \
	admin/manual-updates/run-syncdb.html \
	base_feeds.html \
	base.html \
	diffviewer/changeindex.html \
	diffviewer/comments_dlg.html \
	diffviewer/diff_file_fragment.html \
	diffviewer/diff_fragment_error.html \
	diffviewer/view_diff.html \
	feeds/reviews_description.html \
	feeds/reviews_title.html \
	iphone/base.html \
	iphone/dashboard.html \
	iphone/dashboard_list.html \
	iphone/diff_files.html \
	iphone/diff.html \
	iphone/group_list.html \
	iphone/login.html \
	iphone/review_request_detail.html \
	iphone/review_request_list.html \
	iphone/submitter_list.html \
	iphone/user_prefs.html \
	reports/report_list.html \
	reports/review-moinmoin.txt \
	reports/review_request-moinmoin.txt \
	reports/review_request-text.txt \
	reports/review-text.txt \
	reports/status_report-moinmoin.txt \
	reports/status_report-text.txt \
	reviews/dashboard_entry.html \
	reviews/dashboard.html \
	reviews/datagrid.html \
	reviews/new_review_request.html \
	reviews/reply_email.txt \
	reviews/review_detail.html \
	reviews/review_email.txt \
	reviews/review_header.html \
	reviews/review_reply.html \
	reviews/review_reply_section.html \
	reviews/review_request_box.html \
	reviews/review_request_email.txt \
	reviews/review_request_listview.html \
	reviews/screenshot_detail.html \
	reviews/screenshotindex.html \
	reviews/search.html \
	reviews/star.html

EXTRA_DIST = $(nobase_rb_DATA)
